cmake_minimum_required(VERSION 3.28)
project(algorithm)

set(CMAKE_CXX_STANDARD 17)

add_executable(algorithm
        数组：1.二分查找法.cpp
        数组：2.移除元素.cpp
        数组：3.有序数组的平方.cpp
        数组：4.长度最小的子数组.cpp
        数组：5.螺旋矩阵II.cpp
        链表：1.移除链表元素.cpp
        链表：2.设计链表.cpp
        链表：3.反转链表.cpp
        链表：4.两两交换链表中的节点.cpp
        c++特性：Lambda表达式.cpp
        链表：5.删除链表倒数第n个节点.cpp
        链表：6.环形链表II.cpp
        哈希表：1.有效的字母异位词.cpp
        哈希表：2.两个数组的交集.cpp
        哈希表：3.两数之和.cpp
        哈希表：4.四数相加II.cpp
        二叉树：1.二叉树的层序遍历II.cpp
        二叉树：2.二叉树的右视图.cpp
        二叉树：3.二叉树的层平均值.cpp
        二叉树：4.在每个树形中找最大值.cpp
        二叉树：5.二叉树的最大深度.cpp
        二叉树：6.二叉树的最小深度.cpp
        二叉树：7.翻转二叉树.cpp
        二叉树：8.对称二叉树.cpp
)
