cmake_minimum_required(VERSION 3.28)
project(algorithm)

set(CMAKE_CXX_STANDARD 17)

# Create separate executable for each main function
add_executable(algorithm_Array_Test01 Array_Test01.cpp)
add_executable(algorithm_Array_Test02 Array_Test02.cpp)
add_executable(algorithm_Array_Test03 Array_Test03.cpp)
add_executable(algorithm_Array_Test04 Array_Test04.cpp)
add_executable(algorithm_Array_Test05 Array_Test05.cpp)
add_executable(algorithm_List_Test01 List_Test01.cpp)
add_executable(algorithm_List_Test02 List_Test02.cpp)
add_executable(algorithm_List_Test03 List_Test03.cpp)
add_executable(algorithm_List_Test04 List_Test04.cpp)
add_executable(algorithm_Lambda_expression Lambda_expression.cpp)
add_executable(algorithm_List_Test05 List_Test05.cpp)
add_executable(algorithm_List_Test06 List_Test06.cpp)
add_executable(algorithm_Hash_Test01 Hash_Test01.cpp)
add_executable(algorithm_Hash_Test02 Hash_Test02.cpp)
add_executable(algorithm_Hash_Test03 Hash_Test03.cpp)
add_executable(algorithm_Hash_Test04 Hash_Test04.cpp)
add_executable(algorithm_BT_Test01 BT_Test01.cpp)
add_executable(algorithm_BT_Test02 BT_Test02.cpp)
add_executable(algorithm_BT_Test03 BT_Test03.cpp)
add_executable(algorithm_BT_Test04 BT_Test04.cpp)
add_executable(algorithm_BT_Test05 BT_Test05.cpp)
add_executable(algorithm_BT_Test06 BT_Test06.cpp)
add_executable(algorithm_BT_Test07 BT_Test07.cpp)
add_executable(algorithm_BT_Test08 BT_Test08.cpp)
add_executable(algorithm_Stack_Container "Create container by C/Stack_Container.c")
add_executable(algorithm_Queue_Container "Create container by C/Queue_Container.c")
add_executable(algorithm_Hash_Test05 Hash_Test05.cpp)
add_executable(algorithm_Hash_Test06 Hash_Test06.cpp)
add_executable(algorithm_Hash_Test07 Hash_Test07.cpp)
add_executable(algorithm_demo1 demo1.cpp)
add_executable(algorithm_demo2 demo2.cpp)

