cmake_minimum_required(VERSION 3.28)
project(algorithm)

set(CMAKE_CXX_STANDARD 17)

# Create separate executable for each main function
add_executable(algorithm_Array_Test01 Array_Test01.cpp)
add_executable(algorithm_Array_Test02 Array_Test02.cpp)
add_executable(algorithm_Array_Test03 Array_Test03.cpp)
add_executable(algorithm_Array_Test04 Array_Test04.cpp)
add_executable(algorithm_Array_Test05 Array_Test05.cpp)
add_executable(algorithm_List_Test01 List_Test01.cpp)
add_executable(algorithm_List_Test02 List_Test02.cpp)
add_executable(algorithm_List_Test03 List_Test03.cpp)
add_executable(algorithm_List_Test04 List_Test04.cpp)
add_executable(algorithm_Lambda_expression Lambda_expression.cpp)
add_executable(algorithm_List_Test05 List_Test05.cpp)
add_executable(algorithm_List_Test06 List_Test06.cpp)
add_executable(algorithm_Hash_Test01 Hash_Test01.cpp)
add_executable(algorithm_Hash_Test02 Hash_Test02.cpp)
add_executable(algorithm_Hash_Test03 Hash_Test03.cpp)
add_executable(algorithm_Hash_Test04 Hash_Test04.cpp)
add_executable(algorithm_BT_Test01 BT_Test01.cpp)
add_executable(algorithm_BT_Test02 BT_Test02.cpp)
add_executable(algorithm_BT_Test03 BT_Test03.cpp)
add_executable(algorithm_BT_Test04 BT_Test04.cpp)
add_executable(algorithm_BT_Test05 BT_Test05.cpp)
add_executable(algorithm_BT_Test06 BT_Test06.cpp)
add_executable(algorithm_BT_Test07 BT_Test07.cpp)
add_executable(algorithm_BT_Test08 BT_Test08.cpp)
add_executable(algorithm_Stack_Container "Create container by C/Stack_Container.c")
add_executable(algorithm_Queue_Container "Create container by C/Queue_Container.c")
add_executable(algorithm_Hash_Test05 Hash_Test05.cpp)
add_executable(algorithm_Hash_Test06 Hash_Test06.cpp)
add_executable(algorithm_Hash_Test07 Hash_Test07.cpp)
add_executable(algorithm_demo1 demo1.cpp)
add_executable(algorithm_demo2 demo2.cpp)
add_executable(algorithm_demo3 demo3.cpp)
add_executable(algorithm_Map_matrix Map_matrix.cpp)
add_executable(algorithm_Map_matrix_demo1 Map_matrix_demo1.cpp)
add_executable(algorithm_Map_List Map_List.cpp)
add_executable(algorithm_Map_BFS Map_BFS.cpp)
add_executable(algorithm_dem06 demo6.cpp)
add_executable(algorithm_Map_List_Demo1 Map_List_Demo1.cpp)
add_executable(algorithm_Map_BFS_Demo1 Map_BFS_Demo1.cpp)
add_executable(algorithm_Map_DFS Map_DFS.cpp)
add_executable(algorithm_Map_DFS_Demo1 Map_DFS_Demo1.cpp)
add_executable(algorithm_Array_shellSort Array_shellSort.cpp)
add_executable(algorithm_Array_SelectionSort Array_SelectionSort.cpp)
add_executable(algorithm_Map_Prime Map_Prime.cpp)
add_executable(algorithm_Map_Kruskal Map_Kruskal.cpp)
add_executable(algorithm_String_Test01 String_Test01.cpp)
add_executable(algorithm_String_Test02 String_Test02.cpp)
add_executable(algorithm_String_Test03 String_Test03.cpp)